@@ -8,4 +8,17 @@
 #  error "No PQXX_HAVE_MULTIDIM: __cpp_multidimensional_subscript is false."
 #endif
 
-int main() {}
+#include <source_location>
+
+
+struct foo
+{
+  int operator[](int i) const { return i; }
+  int operator[](int i, std::source_location l) const { return i - 1; }
+};
+
+
+int main()
+{
+  return foo{}[1, std::source_location::current()];
+}
